﻿ChangeLog:
Версия 12.0 Final r??? (?? января 2013):
 * 

Версия 11.0 Final r657 (10 октября 2012):
 * модуль создания отчётов для Техподдержки теперь добавляет в архив информацию об установленном в системе DirectX и все краш-дампы управляемой игры;
 * имена файлов и каталогов в архивах, создаваемых модулем отчётов для Техподдержки, теперь приводятся к нижнему регистру;
 * добавлено русскоязычное описание новых переменных, введённых в последних обновлениях движка;
 * добавлено описание переменных в английской версии приложения;
 * добавлена многопоточность в модулях очистки и создания отчётов для техподдержки;
 * конец строки в текстовых файлах changelog.txt и GPL.txt преобразован в Windows-формат (\r\n) из Unix (\n);
 * удалена ненужная большинству пользователей функция восстановления настроек;
 * добавлена функция глубокой очистки управляемой игры;
 * добавлена полная поддержка игр Revelations 2012 и Dota 2 Test;
 * добавлена полная поддержка ОС Microsoft Windows 8;
 * удалены тестовые и отладочные функции;
 * исправлено несколько опечаток и неточностей;
 * значительно улучшена работа модуля очистки;
 * применены патчи для улучшения стабильности работы приложения под новейшей версией Mono в GNU/Linux и MacOS;
 * устранено "зависание" формы создания отчётов;
 * устранена ошибка, приводившая к бесконечному ожиданию завершения очистки, проявлявшаяся на некоторых системах;
 * добавлен новый FPS-конфиг chrisdx9frames;
 * все остальные FPS-конфиги обновлены до новейших версий на момент релиза утилиты;
 * незначительно изменено окно "О программе";
 * добавлена отправка UserAgent при проверке и загрузке обновлений;
 * исправлены незначительные ошибки.

Версия 10.0 Final r621 (25 июля 2012):
 * исправлена ошибка, из-за которой модуль создания сжатых отчётов для техподдержки сохранял в архив полную структуру каталогов;
 * реализована блокировка управляющих кнопок в диалоге модуля очистки после её запуска;