@@ -1,5 +1,6 @@
 ﻿ChangeLog:
 Версия 12.0 Final r??? (?? января 2013):
+ * добавлена полная поддержка официального релиза Steam для GNU/Linux;
  * 
 
 Версия 11.0 Final r657 (10 октября 2012):
